--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -112,6 +112,9 @@
       {% if author.orcid %}
         <li><a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
       {% endif %}
+        {% if author.dblp %}
+        <li><a href="{{ author.dblp }}"><i class="fab fa-fw fa-dblp" aria-hidden="true"></i> DBLP</a></li>
+      {% endif %}
       {% if author.impactstory %}
         <li><a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw"></i> Impactstory</a></li>
       {% endif %}
