add icon for dblp

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -112,8 +112,8 @@
       {% if author.orcid %}
         <li><a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
       {% endif %}
-        {% if author.dblp %}
-        <li><a href="{{ author.dblp }}"><i class="fab fa-fw fa-dblp" aria-hidden="true"></i> DBLP</a></li>
+      {% if author.dblp %}
+        <li><a href="{{ author.dblp }}"><i class="ai ai-dblp ai-fw"></i> dblp</a></li>
       {% endif %}
       {% if author.impactstory %}
         <li><a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw"></i> Impactstory</a></li>
